WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33625
CounterNode::nextInPreOrderAfterChildren(stayWithin) does not stay within.
https://bugs.webkit.org/show_bug.cgi?id=33625
Summary
CounterNode::nextInPreOrderAfterChildren(stayWithin) does not stay within.
Carol Szabo
Reported
2010-01-13 14:58:33 PST
The same problem that
bug 33600
reported about RenderObject is being inherited by virtue of copy-paste programing here. If stayWithin has a nextSibling() the method returns it instead of null when called on stayWithin's last descendant, hence causing an iteration of the counterTree designed to stay within stayWithin's descendants, iterates to the end of the counterTree. Patch to come soon.
Attachments
Proposed patch
(1.58 KB, patch)
2010-01-13 16:00 PST
,
Carol Szabo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carol Szabo
Comment 1
2010-01-13 16:00:49 PST
Created
attachment 46517
[details]
Proposed patch
WebKit Commit Bot
Comment 2
2010-01-13 19:30:46 PST
Comment on
attachment 46517
[details]
Proposed patch Clearing flags on attachment: 46517 Committed
r53230
: <
http://trac.webkit.org/changeset/53230
>
WebKit Commit Bot
Comment 3
2010-01-13 19:30:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug