2010-01-13  Carol Szabo <carol.szabo@nokia.com>

Reviewed by Darin Adler.

        CounterNode::nextInPreOrderAfterChildren(stayWithin) does not stay within.
        https://bugs.webkit.org/show_bug.cgi?id=33625

        No new tests because the fix should affect strictly performance.

        * rendering/CounterNode.cpp:
        (WebCore::CounterNode::nextInPreOrderAfterChildren):

Canonical link: https://commits.webkit.org/44638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53230 268f45cc-cd09-0410-ab3c-d52691b4dbfc